Alpha 0.1.8.24
- Fixed powerblock cache not being invalidated when creating a new door (so you couldn't use it). Cache is now also invalidated when removing doors. Thanks, @PirateCraft, for the bug report!
- Exposed some methods to check which chunks a door might interact with when opening and if they are currently loaded or not.
- Added new config option "loadChunksForToggle" that determines how the plugin handles unloaded chunks. When set to true, it will load any necessary chunks and move the blocks without animation. When set to false, it will abort the toggle attempt (and not load any chunks).
- Added new config option "maxPowerBlockDistance" that, as the name implies, limits the maximum distance between a powerblock and the door it belongs to (its engine, specifically). Thanks, @PirateCraft, for the suggestion!

Alpha 0.1.8.23
- Added full support for 1.16's new blocks so you no longer have to manually add them to the whitelist. Thanks, @thedarkonekiller, for the bug report!
- Permissions now default to OPs again.
- Removed Spiget in favor of GitHub releases, as Spiget proved to be too unreliable. 
- Renamed "bigdoors.user" permission node to "bigdoors.user.base", so that "bigdoors.user.*" will include the most important permissions as well.
- A portcullis will now respect its open direction, even if there is no space to go in that direction. Thanks, @xph11, for the bug report!

Alpha 0.1.8.22
- Abort initialization in certain invalid environments. This can be bypassed, but doing so is NOT SUPPORTED!!
- Added information about why a command failed if the plugin failed to initialize properly.
- Fixed portcullises and sliding doors getting 'stuck' when they could not find a direction to go in.
- Added configurable, global blocksToMove limit for doors such as sliding doors. This should help avoid unnecessary stress for servers caused by malicious players. Thanks, @Jim for the suggestion!